language/tests/error/InvalidAssignmentInBinOp.sl
toeminto double(x) {
  return 2 * x;
}

toeminto piä() {
  5 + double(2) = 4;
}